--- a/css/shows-style.css
+++ b/css/shows-style.css
@@ -2,22 +2,59 @@ body{
     background-color: black;
 }
 
-header {display: flex;
-    background-color: white;
-    height: 20px;
-    align-items: center;
-    padding: 20px;
+.logo {
+    text-align: center;
+    margin-bottom: 10px;
+  }
+  
+  .navbar {
+    display: flex;
     justify-content: space-between;
-    font-family: Arial, Helvetica, sans-serif;
-    
-}
+    align-items: center;
+    background-color: #f1f1f1;
+    padding: 10px;
+  }
+  
+  .navbar-menu {
+    display: none;
+    list-style-type: none;
+  }
+  
+  .navbar-menu li {
+    padding: 10px;
+  }
+  
+  .menu-icon {
+    display: none;
+    font-size: 24px;
+    cursor: pointer;
+  }
+  
+  /* Estilos para dispositivos móviles */
+  @media (max-width: 768px) {
+    .navbar {
+      flex-direction: column;
+    }
+  
+    .navbar-menu {
+      display: none;
+    }
+  
+    .menu-icon {
+      display: block;
+    }
+  
+    .toggle-menu {
+      display: none;
+    }
+  
+    .toggle-menu:checked ~ .navbar-menu {
+      display: block;
+    }
+  }
+  
 
-.logo {display: flex;
-}
 
-.logo img {
-    height: 50px;
-}
  
 body
 {background-color: black;
@@ -39,10 +76,4 @@ nav a:hover{
 }
 p{
     color: white;
-}
-
-.class {
-    display: grid;
-    gap: 80px;
-    grid-template-columns: 1fr 2fr;
 }
