--- a/sass/main.css
+++ b/sass/main.css
@@ -1,3 +1,10 @@
+.navbar-nav li {
+  margin-right: 40px;
+}
+.navbar-nav li .navbar-nav li a:hover {
+  color: gray;
+}
+
 body {
   background-color: black;
   margin: 0;
