--- a/sass/expo.css
+++ b/sass/expo.css
@@ -1,3 +1,8 @@
+body {
+  background-color: black;
+  margin: 0;
+}
+
 .navbar-nav li {
   margin-right: 40px;
 }
@@ -5,7 +10,65 @@
   color: gray;
 }
 
-body {
+.tituloContainer {
+  color: white;
+  font-size: 80px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  background-color: grey;
+  padding: 0;
+  text-align: center;
+}
+
+.pContainer {
+  color: white;
+  margin-bottom: 10px;
+  margin-top: 10px;
   background-color: black;
-  margin: 0;
+  padding: 0;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 20px;
+}
+
+footer {
+  background-color: black;
+  padding: 20px;
+}
+
+.footer .col-md-12 {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+@media (max-width: 768px) {
+  footer .col-md-12 {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.iframeExpo {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+@media (min-width: 400px) {
+  .iframeExpo {
+    grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+    grid-gap: 20px;
+  }
+  .iframeExpo iframe {
+    width: 100%;
+    height: 300px;
+  }
+}
+@media (min-width: 800px) {
+  .iframeExpo {
+    justify-content: center;
+  }
+  .iframeExpo iframe {
+    width: 900px;
+    height: 400px;
+  }
 }/*# sourceMappingURL=expo.css.map */
