--- a/sass/expo.scss
+++ b/sass/expo.scss
@@ -1,3 +1,39 @@
-@import "navbar";
 @import "body";
+@import "navbar";
+@import "titulos";
+@import "parrafos";
+@import "footer";
+
+.iframeExpo {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+@media (min-width: 400px) {
+.iframeExpo {
+
+    grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+    grid-gap: 20px;
+    iframe {
+    width: 100%;
+    height: 300px;
+    }    
+  }
+}
+
+@media (min-width: 800px) {
+    .iframeExpo {
+      justify-content: center;
+      iframe {
+        width: 900px;
+        height: 400px;
+        }  
+  
+  
+    }
+  }
+
+    
+    
 
