--- a/sass/foto.css
+++ b/sass/foto.css
@@ -10,6 +10,57 @@ body {
   color: gray;
 }
 
+.tituloContainer {
+  color: white;
+  font-size: 80px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  background-color: grey;
+  padding: 0;
+  text-align: center;
+}
+
+.pContainer {
+  color: white;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  background-color: black;
+  padding: 0;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 20px;
+}
+
+footer {
+  background-color: black;
+  padding: 20px;
+}
+
+.footer .col-md-12 {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+@media (max-width: 768px) {
+  footer .col-md-12 {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 body {
   background-color: black;
+}
+
+.containerImg {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+@media (max-width: 360px) {
+  .containerImg img {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
 }/*# sourceMappingURL=foto.css.map */
