--- a/sass/main.css
+++ b/sass/main.css
@@ -10,6 +10,23 @@ body {
   margin: 0;
 }
 
+footer {
+  background-color: black;
+  padding: 20px;
+}
+
+.footer .col-md-12 {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+@media (max-width: 768px) {
+  footer .col-md-12 {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 div p {
   font-size: 20px;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
