--- a/sass/pruebasalones.css
+++ b/sass/pruebasalones.css
@@ -10,6 +10,33 @@ body {
   color: gray;
 }
 
+footer {
+  background-color: black;
+  padding: 20px;
+}
+
+.footer .col-md-12 {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+@media (max-width: 768px) {
+  footer .col-md-12 {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.tituloContainer {
+  color: white;
+  font-size: 80px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  background-color: grey;
+  padding: 0;
+  text-align: center;
+}
+
 div p {
   color: white;
   font-size: 30px;
