--- a/sass/shows.css
+++ b/sass/shows.css
@@ -8,4 +8,77 @@ body {
 }
 .navbar-nav li .navbar-nav li a:hover {
   color: gray;
+}
+
+.tituloContainer {
+  color: white;
+  font-size: 80px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  background-color: grey;
+  padding: 0;
+  text-align: center;
+}
+
+.pContainer {
+  color: white;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  background-color: black;
+  padding: 0;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 20px;
+}
+
+footer {
+  background-color: black;
+  padding: 20px;
+}
+
+.footer .col-md-12 {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+@media (max-width: 768px) {
+  footer .col-md-12 {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media (min-width: 360px) {
+  .pContainer {
+    max-width: 100%;
+    padding: 10px;
+    font-size: 20px;
+  }
+}
+.cajaVideo {
+  display: grid;
+  grid-template-columns: repeat(2, 2fr);
+  grid-gap: 20px;
+  background-color: black;
+  margin: 0;
+}
+
+@media (min-width: 360px) {
+  .cajaVideo {
+    grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+    grid-gap: 20px;
+  }
+  .cajaVideo iframe {
+    width: 100%;
+    height: 250px;
+  }
+}
+@media (min-width: 800px) {
+  .cajaVideo {
+    grid-template-columns: repeat(2, 2fr);
+  }
+  .cajaVideo iframe {
+    width: 560px;
+    height: 315px;
+    margin-left: 60px;
+  }
 }/*# sourceMappingURL=shows.css.map */
